<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/organizer_attendee_actionbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/attendee_actionbar">

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            app:cardCornerRadius="150dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true">
            <ImageView
                android:id="@+id/profile_image"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/test_profile"
                >
            </ImageView>
        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/button_user_mode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/switch_user_mode"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/attendee_organizer_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text=""
            android:background="@null"
            android:clickable="false"
            android:textSize="35dp"
            android:textStyle="bold">
        </TextView>

    </RelativeLayout>

</RelativeLayout>
