<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/organizer_attendee_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#F35F5F">
        <ImageView
            android:id="@+id/back_arrow_img"
            android:clickable="true"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow_img">
        </ImageView>
        <TextView
            android:id="@+id/back_actionbar_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text=""
            android:background="@null"
            android:clickable="false"
            android:textSize="40dp"
            android:textStyle="bold">

        </TextView>

    </RelativeLayout>




</RelativeLayout>