<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/organizer_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Organizer">

    <FrameLayout
        android:id="@+id/organizer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/actionbar_organizer"
                android:id="@+id/attendee_organizer"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/organized_events"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/attendee_organizer"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_create_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="?attr/button_color_1"
                android:clickable="true"
                android:focusable="true"
                android:src="@android:drawable/ic_input_add"
                android:contentDescription="create event" />
        </RelativeLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>