...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?backgroundColor"
    tools:context=".adminFragments.ViewEventsAdmin">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/admin_events_layout">

        <LinearLayout
            android:id="@+id/admin_view_event_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
...
                android:id="@+id/general_actionbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/attendee_actionbar_day">

                <ImageButton
                    android:id="@+id/view_events_back_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:background="?selectableItemBackgroundBorderless"
                    android:scaleType="centerInside"
...
